UPDATE - Novo layout da Página Inicial

--- a/Site do Deadpool.html
+++ b/Site do Deadpool.html
@@ -39,6 +39,7 @@
                 <button type="button" onclick="window.location='Site do Deadpool - História.html'">É pra clicar aqui seus bosta!</button>
             </div>
 
+            <hr>
 
             <div class="info">
                 <h2>Aliados</h2>
@@ -50,6 +51,8 @@
                     
                 </details>
             </div>
+
+<hr>
 
             <div class="info">
 
@@ -65,10 +68,12 @@
 
             </div>
 
+<hr>
+
             <div class="info">
 
                 <h2>Flagras</h2>
-                    <p>Vamos ver alguns flagras desse arrombad* pelas ruas</p>
+                    <h3>Vamos ver alguns flagras desse arrombad* pelas ruas</h3>
             
             </div>
 
