UPDATE - Alterações Visuais

--- a/Site do Deadpool - História.html
+++ b/Site do Deadpool - História.html
@@ -21,7 +21,10 @@
 
         </div>
 
-        <button type="button" onclick="window.location='Site do Deadpool.html'">Clica pra voltar pequeno mano!</button>
+        <div id="buttons">
+            <button type="button" onclick="window.location='Site do Deadpool.html'">Página Inicial</button>
+            <button type="button" onclick="window.location='Site do Deadpool - Vilões.html'">Vilões</button>
+        </div>
 
     </header>
 
