UPDATE - Início da padronização do tamanho das imagens de notícias

--- a/Site do Deadpool.html
+++ b/Site do Deadpool.html
@@ -85,7 +85,7 @@
 
             <figure>
 
-                <img src="riding a rocket.jfif" alt="rocket">
+                <img src="riding a rocket.jfif" alt="rocket" width="400">
                 <figcaption>Ayo, ma man is riding a f*cking rocket?</figcaption>
 
             </figure>
