UPDATE - Padronização do tamanho das imagens de notícias 2.0

--- a/Site do Deadpool.html
+++ b/Site do Deadpool.html
@@ -92,7 +92,7 @@
 
             <figure>
 
-                <img src="what.jfif" alt="rocket">
+                <img src="what.jfif" alt="rocket" width="400">
                 <figcaption>What is he doing to Wolverine stepbro?</figcaption>
 
             </figure>
