UPDATE - Padronização do tamanho das imagens de notícias 3.0

--- a/Site do Deadpool.html
+++ b/Site do Deadpool.html
@@ -99,7 +99,7 @@
             
             <figure>
 
-                <img src="woman" alt="woman">
+                <img src="woman" alt="woman" width="400">
                 <figcaption>Did he just turn into a woman?</figcaption>
 
             </figure>
