UPDATE - Padronização do tamanho das imagens de notícias 4.0

--- a/Site do Deadpool.html
+++ b/Site do Deadpool.html
@@ -106,7 +106,7 @@
 
             <figure>
 
-                <img src="maloka.jfif" alt="maloka">
+                <img src="maloka.jfif" alt="maloka" width="400">
                 <figcaption>Ayo meu mano virou maloka do RJ</figcaption>
 
             </figure>
