UPDATE - Padronização do tamanho das imagens de notícias - FINAL VERSION

--- a/Site do Deadpool.html
+++ b/Site do Deadpool.html
@@ -113,7 +113,7 @@
             
             <figure>
 
-                <img src="kissing head.webp" alt="kissing head">
+                <img src="kissing head.webp" alt="kissing head" width="400">
                 <figcaption>Why bro giving head kisses to him?</figcaption>
 
             </figure>
