UPDATE - Padronização do tamanho das imagens de notícias - FINAL UPDATE 2.0

--- a/Site do Deadpool.html
+++ b/Site do Deadpool.html
@@ -120,14 +120,14 @@
 
             <figure>
 
-                <img src="huh.jpg" alt="huh">
+                <img src="huh.jpg" alt="huh" width="400">
                 <figcaption>Freaky Deadpool</figcaption>
 
             </figure>
             
             <figure>
 
-                <img src="bke.jpg" alt="bke">
+                <img src="bke.jpg" alt="bke" width="400">
                 <figcaption>Ma man got a new car</figcaption>
 
             </figure>
